--- a/default.css
+++ b/default.css
@@ -2,6 +2,8 @@
 
 body
 {
+	font-family: "nimbus-sans-condensed-1","nimbus-sans-condensed-2",sans-serif;
+	
 	background-image: url("images/bg.jpg");
 }
 
@@ -55,7 +57,6 @@ body
 	text-align: right;
 	vertical-align: top;
 	
-	font-family: Arial;
 	font-weight: bold;
 	font-size: 24px;
 	color: #4382B8;
