Updates typekit font

--- a/default.css
+++ b/default.css
@@ -2,7 +2,7 @@
 
 body
 {
-	font-family: "nimbus-sans-condensed-1","nimbus-sans-condensed-2",sans-serif;
+	font-family: "nimbus-sans-1","nimbus-sans-2",sans-serif;
 	
 	background-image: url("images/bg.jpg");
 }
