--- a/default.css
+++ b/default.css
@@ -30,9 +30,13 @@ a:hover,a:active
 	height: 993px;	/* 1029-20-16 */
 	background-image:url("images/fg.png");
 	
+	position: fixed;
+	left: 50%;
+	margin-left: -431px;
+	/*
 	margin-left: auto;
 	margin-right: auto;
-	
+	*/
 	padding-left: 39px;
 	padding-top: 20px;
 	padding-right: 37px;
@@ -207,4 +211,20 @@ a:hover,a:active
 	padding: 10px;
 }
 
-
+#widgets
+{
+	position: fixed;
+	top: 208px;
+	left: 50%;
+	margin-left: 400px;
+	padding-left: 10px;
+	/*
+	width: 55px;
+	background-color: white;
+	border: 4px solid #EDEDED;
+	
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	z-index: 300;
+	*/
+}
